docs/envoy/v1.38.0/_sources/api-v3/extensions/stat_sinks/open_telemetry/v3/open_telemetry.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/stat_sinks/open_telemetry/v3/open_telemetry.proto:

Open Telemetry Stats Sink (proto)
=================================

.. _extension_envoy.stat_sinks.open_telemetry:

This extension has the qualified name ``envoy.stat_sinks.open_telemetry``


.. note::
  This extension is functional but has not had substantial production burn time,
  use only with this caveat.

  This extension does not operate on the data plane and hence is intended to be robust against untrusted traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.stats_sinks <extension_category_envoy.stats_sinks>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig <envoy_v3_api_msg_extensions.stat_sinks.open_telemetry.v3.SinkConfig>`



Stats configuration proto schema for ``envoy.stat_sinks.open_telemetry`` sink.




.. _envoy_v3_api_msg_extensions.stat_sinks.open_telemetry.v3.SinkConfig:

extensions.stat_sinks.open_telemetry.v3.SinkConfig
--------------------------------------------------


:repo:`[extensions.stat_sinks.open_telemetry.v3.SinkConfig proto] <api/envoy/extensions/stat_sinks/open_telemetry/v3/open_telemetry.proto#L27>`




.. code-block:: json
  :force:

  {
    "grpc_service": {...},
    "http_service": {...},
    "resource_detectors": [],
    "report_counters_as_deltas": ...,
    "report_histograms_as_deltas": ...,
    "emit_tags_as_attributes": {...},
    "use_tag_extracted_name": {...},
    "prefix": ...,
    "custom_metric_conversions": {...}
  }

.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.grpc_service:


grpc_service
  (:ref:`config.core.v3.GrpcService <envoy_v3_api_msg_config.core.v3.GrpcService>`) The upstream gRPC cluster that implements the OTLP/gRPC collector.


  

  Precisely one of :ref:`grpc_service <envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.grpc_service>`, :ref:`http_service <envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.http_service>` must be set.

.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.http_service:


http_service
  (:ref:`config.core.v3.HttpService <envoy_v3_api_msg_config.core.v3.HttpService>`) The upstream HTTP cluster that implements the OTLP/HTTP collector.
  See `OTLP/HTTP <https://opentelemetry.io/docs/specs/otlp/#otlphttp>`_.

  .. note::

    The ``request_headers_to_add`` property in the OTLP HTTP exporter service
    does not support the :ref:`format specifier <config_access_log_format>`.
    The values configured are added as HTTP headers on the OTLP export request
    without any formatting applied.


  

  Precisely one of :ref:`grpc_service <envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.grpc_service>`, :ref:`http_service <envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.http_service>` must be set.

.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.resource_detectors:


resource_detectors
  (**repeated** :ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Attributes to be associated with the resource in the OTLP message.


  .. _extension_category_envoy.tracers.opentelemetry.resource_detectors:

  .. tip::

    This extension category has the following known extensions:


    - :ref:`envoy.tracers.opentelemetry.resource_detectors.dynatrace <extension_envoy.tracers.opentelemetry.resource_detectors.dynatrace>`

    - :ref:`envoy.tracers.opentelemetry.resource_detectors.environment <extension_envoy.tracers.opentelemetry.resource_detectors.environment>`

    - :ref:`envoy.tracers.opentelemetry.resource_detectors.static_config <extension_envoy.tracers.opentelemetry.resource_detectors.static_config>`





.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.report_counters_as_deltas:


report_counters_as_deltas
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, counters will be emitted as deltas, and the OTLP message will have
  ``AGGREGATION_TEMPORALITY_DELTA`` set as AggregationTemporality.


.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.report_histograms_as_deltas:


report_histograms_as_deltas
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, histograms will be emitted as deltas, and the OTLP message will have
  ``AGGREGATION_TEMPORALITY_DELTA`` set as AggregationTemporality.


.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.emit_tags_as_attributes:


emit_tags_as_attributes
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) If set to true, metrics will have their tags emitted as OTLP attributes, which may
  contain values used by the tag extractor or additional tags added during stats creation.
  Otherwise, no attributes will be associated with the export message. Default value is true.


.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.use_tag_extracted_name:


use_tag_extracted_name
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) If set to true, metric names will be represented as the tag extracted name instead
  of the full metric name. Default value is true.


.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.prefix:


prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, emitted stats names will be prepended with a prefix, so full stat name will be
  <prefix>.<stats_name>. For example, if the stat name is "foo.bar" and prefix is
  "pre", the full stat name will be "pre.foo.bar". If this field is not set, there is no
  prefix added. According to the example, the full stat name will remain "foo.bar".


.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.custom_metric_conversions:


custom_metric_conversions
  (:ref:`.xds.type.matcher.v3.Matcher <envoy_v3_api_msg_.xds.type.matcher.v3.Matcher>`) The custom conversion from a stat to a metric. Currently, the only supported input is
  ``envoy.extensions.matching.common_inputs.stats.v3.StatFullNameMatchInput``.
  The supported actions are
  - ``envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig.DropAction``.
  - ``envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig.ConversionAction``.
  If stats are not matched, they will be directly converted to OTLP metrics as usual.


.. _envoy_v3_api_msg_extensions.stat_sinks.open_telemetry.v3.SinkConfig.ConversionAction:

extensions.stat_sinks.open_telemetry.v3.SinkConfig.ConversionAction
-------------------------------------------------------------------


:repo:`[extensions.stat_sinks.open_telemetry.v3.SinkConfig.ConversionAction proto] <api/envoy/extensions/stat_sinks/open_telemetry/v3/open_telemetry.proto#L32>`

ConversionAction is used to convert a stat to a metric. If a stat matches,
the metric_name and static_metric_labels will be
used to create the metric. This can be used to rename a
stat, add static labels, and aggregate multiple stats into a single metric.



.. code-block:: json
  :force:

  {
    "metric_name": ...,
    "static_metric_labels": []
  }

.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.ConversionAction.metric_name:


metric_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The metric name to use for the stat.


.. _envoy_v3_api_field_extensions.stat_sinks.open_telemetry.v3.SinkConfig.ConversionAction.static_metric_labels:


static_metric_labels
  (**repeated** .opentelemetry.proto.common.v1.KeyValue) Static metric labels to use for the metric.



.. _envoy_v3_api_msg_extensions.stat_sinks.open_telemetry.v3.SinkConfig.DropAction:

extensions.stat_sinks.open_telemetry.v3.SinkConfig.DropAction
-------------------------------------------------------------


:repo:`[extensions.stat_sinks.open_telemetry.v3.SinkConfig.DropAction proto] <api/envoy/extensions/stat_sinks/open_telemetry/v3/open_telemetry.proto#L41>`

DropAction is an action that, when matched, will prevent the stat from being converted to an OTLP metric and flushed.





